# sosyslog

./: .gitignore  AUTHORS  BUGS  COPYING  ChangeLog  HOW-TO-UPGRADE  HOW_TO_WRITE_A_MODULE  INSTALL  Makefile  Makefile.in  Makefile.linux  Makefile.orig  Makeman  NEWS  QUICK_INSTALL  README  TODO  TODO.h  acinclude.m4  aclocal.m4  config.h  config.h.in  configure  configure.in  im_socket.c  index.html  iolib.c  m_classic.c  m_mysql.c  m_peo.c  modules.conf  modules_conf.sh  om_peo.c  rc_d-sosyslogd  s_modules.h  ssyslogd.c  syslog.conf.cat5  syslogd.c.ale  syslogd.c.ori  syslogd.cat8
doc/: HOW-TO-UPGRADE  HOW_TO_WRITE_A_MODULE  README.mysql  architecture.html  copyright  flowchart.dia
mk/: build.common.mk  build.prog.mk  gen-includes.pl  libtool.ok
mk/libtool/: libtool
packaging/: Makefile.in
packaging/OpenBSD/: Makefile.in
packaging/OpenBSD-devel/: Makefile.in
packaging/OpenBSD-devel/pkg/: DESCR  PLIST
packaging/OpenBSD/pkg/: DESCR  PLIST  PLIST.in
packaging/rpm/: msyslog.init  msyslog.spec  msyslog.spec.in  msyslog.sysconfig
src/: Makefile  Makefile.in  TODO  conditional.h  config.h  config.h.in  modules.c  modules.h  modules_libs.h  options.c  static_headers_create.sh  static_modules.c.in  static_modules.h.in  static_modules.sh  syslogd.c  syslogd.h  tester.c  ttymsg.c
src/examples/: im_mymodule.c  om_mymodule.c  syslog.conf.classic  syslog.conf.mysql  syslog.conf.oracle8i  syslog.conf.peo  syslog.conf.pgsql  syslog.conf.regex
src/man/: BSDmakefile  BSDmakefile.in  GNUmakefile  GNUmakefile.in  Makefile  Makefile.in  im_bsd.8  im_doors.8  im_file.8  im_linux.8  im_pipe.8  im_serial.8  im_streams.8  im_tcp.8  im_udp.8  im_unix.8  imfile.8  om_classic.8  om_directory.8  om_mysql.8  om_oracle8i.8  om_peo.8  om_pgsql.8  om_refract.8  om_regex.8  om_tcp.8  om_udp.8  peochk.8  syslog.conf.5  syslogd.8
src/modules/: Makefile  Makefile.in  im_bsd.c  im_doors.c  im_file.c  im_linux.c  im_mymodule.c  im_pipe.c  im_serial.c  im_streams.c  im_tcp.c  im_udp.c  im_unix.c  ip_misc.c  om_classic.c  om_db2.c  om_directory.c  om_mymodule.c  om_mysql.c  om_oracle8i.c  om_peo.c  om_pgsql.c  om_queue.c  om_refract.c  om_regex.c  om_tcp.c  om_udp.c  sql_misc.c  sql_misc.h  ttymsg.c
src/modules/om_snmptrap/: Makefile  om_snmptrap.8  om_snmptrap.c
src/peo/: GNUmakefile  Makefile  Makefile.in  Makefile.linux  TODO  hash.c  hash.h  md5.h  md5c.c  md5hl.c  peochk.c  peotest.c  rmd160.c  rmd160.h  rmd160hl.c  sha1.c  sha1.h  sha1hl.c  typedefs.h
src/peo/man1/: om_peo.1  peochk.1
tests/: README
tests/config/: mysql  peo  regex
